--- a/TimerWorkPCFrame/View/MainWindow.xaml
+++ b/TimerWorkPCFrame/View/MainWindow.xaml
@@ -80,26 +80,24 @@
                             <ColumnDefinition Width="1*" />
                         </Grid.ColumnDefinitions>
                         <Grid Grid.Column="0">
-                            <TextBlock Text="{Binding StartWorkDateTime , Converter= {StaticResource DayWeekToStringRu}}"
-                                       Style="{StaticResource TextBlockStyle}" />
+                            <TextBlock
+                                Text="{Binding StartWorkDateTime , Converter= {StaticResource DayWeekToStringRu}}"
+                                Style="{StaticResource TextBlockStyle}" />
                         </Grid>
                         <Grid Grid.Column="1"
                               Margin="20,0">
                             <StackPanel VerticalAlignment="Center"
                                         HorizontalAlignment="Center">
-                                <TextBlock Text="{Binding StartWorkDateTime , StringFormat='{}{0:dd.MM.yyyy}'}"
-                                           Style="{StaticResource TextBlockStyle}" />
-                                <TextBlock Text="{Binding StartWorkDateTime , StringFormat='{}{0:HH:mm:ss}'}"
-                                           Style="{StaticResource TextBlockStyle}"/>
+                                <TextBlock
+                                    Text="{Binding StartWorkDateTime , StringFormat='{}{0:dd.MM.yyyy - HH:mm:ss}'}"
+                                    Style="{StaticResource TextBlockStyle}" />
                             </StackPanel>
                         </Grid>
                         <Grid Grid.Column="2"
                               Margin="20,0">
                             <StackPanel VerticalAlignment="Center"
                                         HorizontalAlignment="Center">
-                                <TextBlock Text="{Binding EndDateTime , StringFormat='{}{0:dd.MM.yyyy}'}"
-                                           Style="{StaticResource TextBlockStyle}" />
-                                <TextBlock Text="{Binding EndDateTime , StringFormat='{}{0:HH:mm:ss}'}"
+                                <TextBlock Text="{Binding EndDateTime , StringFormat='{}{0:dd.MM.yyyy - HH:mm:ss}'}"
                                            Style="{StaticResource TextBlockStyle}" />
                             </StackPanel>
                         </Grid>
