--- a/TimerWorkPCFrame/View/MainWindow.xaml
+++ b/TimerWorkPCFrame/View/MainWindow.xaml
@@ -107,6 +107,7 @@
 
         <Grid Grid.Row="2"
               Background="Orange">
+            <TextBlock Text="{Binding TotalTimeWork}" HorizontalAlignment="Left"  Margin="20,0,0,0"/>
             <Button Width="100"
                     Height="30"
                     Command="{Binding ClearTimeListCommand}"
